# confit-lsp

./: .gitignore  README.md  config.toml  confit-lsp-0.0.1.vsix  flake.nix  main.py  pyproject.toml
clients/vscode/: LICENSE  README.md  package-lock.json  package.json
clients/vscode/src/: extension.ts
src/confit_lsp/: descriptor.py  main.py  registry.py  snippet.py
src/confit_lsp/inspection/: location.py  pydantic.py
src/confit_lsp/parsers/: __init__.py  toml.py  types.py  utils.py
