[project]
name = "confit-lsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pygls>=2.0.0", "tomlkit>=0.13.3"]

[project.scripts]
confit-lsp = "confit_lsp.main:run"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"
